--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "eslint": "^8.39.0",
+    "history": "^5.3.0",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.1"
   }
