--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^8.39.0",
     "history": "^5.3.0",
     "prettier": "^2.8.8",
+    "serve": "^14.2.0",
     "tailwindcss": "^3.3.1"
   }
 }
