"test-update" scripts to run test-watch with snapshot update - "serve" script to run development server with prod. version of the app - "start-prod" script to build prod. version of the app and serve it locally

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build",
+    "start-prod": "npm run build && npm run serve",
     "test": "react-scripts test",
+    "test-update": "react-scripts test -u",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
